--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1282,8 +1282,13 @@ body.modal-open .mm-slideout {
 .pricing {
   position: relative;
   z-index: 7;
+  background-image: linear-gradient(
+    to right,
+    rgba(#1429a6, 0.6),
+    rgba(#081040, 1)
+  );
   .pricing_table_wrapper {
-    background-color: #1429a6;
+    // background-color: #1429a6;
     padding: 85px 60px;
     border-radius: 25px;
     margin-top: 50px;
@@ -1295,14 +1300,14 @@ body.modal-open .mm-slideout {
     thead {
       text-align: center;
       th {
-        border-bottom: 1px solid #5c96db;
+        border-bottom: 1px solid #5c95dbbb;
         padding: 20px 0;
         vertical-align: middle;
         width: calc(100% / 4);
-        span{
-          font-size: 1.4rem;
+        span {
+          font-size: 1.1rem;
         }
-        button{
+        button {
           display: block;
           background-color: #fff;
           color: #002047;
@@ -1311,12 +1316,12 @@ body.modal-open .mm-slideout {
           border: 0;
           margin: auto;
           margin-top: 5px;
-          transition: all .3s ease-in-out;
-          &:hover{
+          transition: all 0.3s ease-in-out;
+          &:hover {
             background-color: #0c0c68;
             color: #fff;
           }
-          &:focus{
+          &:focus {
             background-color: #0c0c68;
             color: #fff;
           }
@@ -1343,17 +1348,23 @@ body.modal-open .mm-slideout {
       tr {
         td {
           text-align: center;
-          border-bottom: 1px solid #5c96db;
+          border-bottom: 1px solid #5c95dbbb;
           padding: 20px 0;
           vertical-align: middle;
           width: calc(100% / 4);
           &:first-child {
             text-align: left;
+            p {
+              font-size: 0.9rem !important;
+            }
           }
           p {
             color: #fff;
             font-size: 1rem;
             margin: 0;
+          }
+          span {
+            color: #fff;
           }
         }
         &:last-child {
@@ -1388,8 +1399,9 @@ body.modal-open .mm-slideout {
   }
   .section_header {
     text-align: center;
+    margin-bottom: 50px;
     h5 {
-      font-size: 4rem;
+      font-size: 2.5rem;
       color: #fff;
     }
     p {
@@ -1436,7 +1448,6 @@ body.modal-open .mm-slideout {
   }
 }
 
-
 .facts_number {
   // background-image: url("../images/fact_bg.png");
   padding: 180px 0;
@@ -1477,7 +1488,8 @@ body.modal-open .mm-slideout {
   }
   .fact_body {
     text-align: center;
-    h5, span {
+    h5,
+    span {
       color: #fff;
       font-size: 4rem;
       font-weight: bold;
@@ -1510,7 +1522,7 @@ body.modal-open .mm-slideout {
     margin-bottom: 53px;
     position: relative;
     z-index: 3;
-    h5{
+    h5 {
       color: #fff;
       font-size: 3rem;
     }
@@ -1664,6 +1676,605 @@ body.modal-open .mm-slideout {
 
     li.slick-active button {
       background-color: $secondColor;
+    }
+  }
+}
+
+.product_custom_header {
+  .header_content {
+    h5 {
+      font-size: 3.5rem;
+    }
+    .header_links_demo {
+      background-color: #ff9500;
+    }
+  }
+}
+
+.find_fix {
+  position: relative;
+  min-height: 880px;
+  background-color: #0c0b68;
+  .section_header {
+    position: relative;
+    z-index: 5;
+    margin-top: 70px;
+    h5 {
+      color: #fff;
+      font-size: 2.4rem;
+      line-height: 60px;
+    }
+  }
+  .find_fix_img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    // display: none;
+    border-top-right-radius: 16px;
+    width: 40%;
+    .card_img {
+      height: 880px;
+      border-top-right-radius: 16px;
+      img {
+        border-top-right-radius: 16px;
+      }
+    }
+  }
+}
+
+.find_fix_card {
+  padding: 32px;
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(#c78bff, 0.03),
+    rgba(#2424d91a, 0.03),
+    rgba(#0c0c68, 0.03)
+  );
+  border-radius: 16px;
+  position: relative;
+  z-index: 5;
+  margin-top: 30px;
+  min-height: 285px;
+  .card_icon {
+    img {
+      width: 58px;
+    }
+  }
+  .card_body {
+    h5 {
+      font-size: 1.1rem;
+      font-weight: 700;
+      margin-top: 15px;
+      color: #fff;
+    }
+    p {
+      font-size: 0.9rem;
+      font-weight: 200;
+      margin-top: 10px;
+      color: #fff;
+    }
+  }
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .find_fix_card {
+    -webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
+    background-image: linear-gradient(
+      to bottom right,
+      rgba(#c78bff, 0.08),
+      rgba(#2424d91a, 0.1),
+      rgba(#0c0c68, 0.07)
+    );
+  }
+}
+
+.key_features {
+  padding-top: 110px;
+  background-color: #0c0b68;
+  position: relative;
+  overflow: hidden;
+  .circle_colored {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+  .section_header {
+    text-align: center;
+    padding-bottom: 70px;
+    h5 {
+      color: #fff;
+      font-size: 2.5rem;
+      margin-bottom: 0;
+    }
+  }
+  // ul {
+  //   position: relative;
+  //   &::after {
+
+  //   }
+  // }
+  .key_features_points {
+    position: relative;
+  }
+  .line_dashed {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 1px;
+    height: 85%;
+    z-index: 3;
+    border: 1px dashed #5c96db;
+    right: -95px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    ul {
+      li {
+        border-radius: 50%;
+        border: 1px dashed #5c96db;
+        width: 20px;
+        height: 20px;
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 20px;
+        position: relative;
+        right: 10px;
+        margin-bottom: 105px;
+        span {
+          width: 10px;
+          height: 10px;
+          background-color: #5c96db;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+}
+.feature_card {
+  margin-bottom: 50px;
+  width: fit-content;
+  // border: 1px solid #000;
+  width: 507px;
+  max-width: 100%;
+  text-align: right;
+  position: relative;
+  h5 {
+    font-size: 1.2rem;
+    color: #fff;
+    font-weight: 600;
+  }
+  p {
+    font-size: 0.9rem;
+    color: #fff;
+    font-weight: 300;
+  }
+  &.reverse_right {
+    margin-left: auto;
+    text-align: left;
+  }
+}
+
+.deep_dive {
+  background-color: #0c0b68;
+  padding-top: 50px;
+  position: relative;
+  .vector_7 {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0, -50%);
+  }
+  .vector_8 {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
+  }
+  .section_header {
+    text-align: center;
+    margin-bottom: 80px;
+    h5 {
+      font-size: 2.5rem;
+      color: #fff;
+    }
+  }
+}
+
+.deep_dive_card {
+  margin-bottom: 35px;
+  position: relative;
+  z-index: 8;
+  .card_icon {
+    img {
+      width: 20px;
+    }
+  }
+  h1 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 15px;
+    margin-top: 10px;
+  }
+  p {
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 300;
+    width: 80%;
+  }
+}
+
+.dont_wait {
+  .dont_wait_wrapper {
+    background-image: linear-gradient(
+      to right,
+      rgba(#99009e, 0.2),
+      rgba(#071fad, 0.4)
+    ) !important;
+    padding: 90px;
+    text-align: center;
+    &::after {
+      display: none;
+    }
+  }
+}
+
+.dark_web_montring_header {
+  min-height: 90vh;
+  height: auto;
+  padding-top: 200px;
+  .header_content {
+    text-align: center;
+    margin-bottom: 70px;
+    h5 {
+      font-size: 3.5rem;
+      background: linear-gradient(to right, #9fb5ff, #d99dff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+  .tabs_for {
+    border-radius: 48px;
+    background-color: #00000033;
+    z-index: 5;
+    position: relative;
+    padding: 0px 0;
+    width: fit-content;
+    margin: auto;
+    li {
+      padding: 18px 25px;
+      height: 100%;
+      border-radius: 48px;
+      a {
+        color: #fff;
+        font-size: 1rem;
+      }
+      &.active {
+        background-image: linear-gradient(
+          to right,
+          rgba(#3e1388, 1),
+          rgba(#052490, 1)
+        );
+      }
+    }
+  }
+  .page_title {
+    text-align: center;
+    margin-top: 70px;
+    h5 {
+      color: #fff;
+      font-size: 2.4rem;
+    }
+  }
+}
+
+.dark_option_box {
+  padding: 64px 24px;
+  padding-bottom: 25px;
+  background-image: linear-gradient(
+    to bottom left,
+    rgba(#8516ca, 0.2),
+    rgba(#2b5bff, 0.5)
+  );
+  border-radius: 16px;
+  margin-top: 75px;
+  margin-bottom: 70px;
+  position: relative;
+  z-index: 5;
+  h5 {
+    font-size: 2rem;
+    color: #fff;
+    text-align: center;
+  }
+  ul {
+    margin-top: 50px;
+    margin-bottom: 100px;
+    li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 12px;
+      span {
+        color: #fff;
+        margin-left: 15px;
+        font-weight: 200;
+      }
+    }
+  }
+  .btn_talk {
+    position: absolute;
+    bottom: 25px;
+    width: 85%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    a {
+      display: block;
+      background-image: linear-gradient(
+        to right,
+        rgba(#bf15b7, 0.4),
+        rgba(#020258, 0.6)
+      );
+      padding: 16px;
+      border-radius: 12px;
+      text-align: center;
+      color: #fff;
+    }
+  }
+}
+
+.dark_option_box_advanced {
+  background-image: linear-gradient(
+    to right,
+    rgba(#0c0c68, 1),
+    rgba(#0c0c68, 1)
+  ) !important;
+  border: 4px solid #cd81da4d;
+}
+
+.attack_dark_option_box_advanced {
+  min-height: 835px;
+  h5 {
+    // margin-bottom: 0;
+  }
+  ul {
+    margin-bottom: 50px;
+  }
+  p {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #fff;
+    span {
+      color: #ce36ad;
+    }
+  }
+}
+
+.about_us_web_montring_header {
+  min-height: 55vh;
+  .header_content {
+    text-align: center;
+    p {
+      font-size: 1.3rem;
+      font-weight: 300;
+      width: 55%;
+      margin: auto;
+      margin-bottom: 20px;
+    }
+    a {
+      padding: 16px 24px;
+      display: block;
+      border-radius: 60px;
+      width: fit-content;
+      color: #fff;
+      margin: auto;
+      background-image: linear-gradient(
+        to right,
+        rgba(#3e1388, 1),
+        rgba(#052490, 1)
+      );
+    }
+  }
+}
+
+.why_choose_us {
+  background-color: #0c0b68;
+  padding: 70px 0;
+  position: relative;
+  .vector_9{
+    position: absolute;
+    top: 70%;
+    transform: translate(0, -50%);
+    right: 0;
+    z-index: 1;
+  }
+  .vector_10{
+    position: absolute;
+    top: 70%;
+    transform: translate(0, -50%);
+    left: 0;
+    z-index: 1;
+  }
+  .section_header {
+    text-align: center;
+    h5 {
+      color: #fff;
+      font-size: 2rem;
+    }
+  }
+  .why_choose_us_cards{
+    position: relative;
+    z-index: 5;
+  }
+}
+
+.why_choose_us_card{
+  background-image: linear-gradient(to right bottom, rgba(#2424D91A, .1), rgba(#0C0C68, .1));
+  border-radius: 16px;
+  min-height: 450px;
+  padding: 80px 32px;
+  margin-top: 73px;
+  position: relative;
+  z-index: 5;
+  .card_icon{
+    margin-bottom: 15px;
+  }
+  p{
+    font-size: .9rem;
+    line-height: 25px;
+  }
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .why_choose_us_card {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-image: linear-gradient(to right bottom, rgba(#2424D91A, .1), rgba(#0C0C68, .1));
+  }
+}
+
+.testemonials_new{
+  background-color: #0c0b68;
+}
+
+.testemonials_new_card{
+  .card_body{
+    margin-left: 14px;
+    h5{
+      font-size: 2.5rem;
+      color: #fff;
+      font-kerning: bold;
+      margin: 0;
+    }
+    p{
+      font-size: .9rem;
+      color: #fff;
+      font-weight: 200;
+      margin: 0;
+      margin-top: 5px;
+    }
+  }
+}
+
+
+.team_certificate{
+  padding: 90px 0;
+  background-color: #0c0b68;
+  padding-top: 160px;
+  .section_header{
+    text-align: center;
+    h5{
+      color: #fff;
+      font-size: 2rem;
+    }
+    p{
+      font-size: 1.3rem;
+      color: #fff;
+      margin-top: 20px;
+    }
+  }
+}
+
+.team_certificate_slider{
+  margin-top: 75px;
+  .card_icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 160px;
+    // border: 1px solid #000;
+    position: relative;
+    img{
+      display: block;
+      width: 60%;
+    }
+  }
+}
+
+.aknowlged_by{
+  background-color: #0c0b68;
+  .aknowlged_by_wrapper{
+    background-image: url('../images/index.png');
+    padding: 94px;
+    padding-bottom: 50px;
+    position: relative;
+    @extend %backgroundImage;
+    border-radius: 16px;
+    &::after{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      content: "";
+      background-color: rgba(#0C0C68, .8);
+    }
+    .section_header{
+      position: relative;
+      z-index: 3;
+      h5{
+        color: #fff;
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 60px;
+      }
+    }
+    .aknowlged_by_slider{
+      position: relative;
+      z-index: 3;
+      text-align: center;
+      margin-bottom: 0;
+      .card_icon{
+        height: 100px;
+        // border: 1px solid #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      img{
+        width: 180px;
+        margin: auto;
+      }
+    }
+  }
+}
+
+
+.our_partners_new{
+  padding: 150px 0;
+  position: relative;
+  .vecor_92{
+    position: absolute;
+    top: 30%;
+    left: 0;
+    transform: translate(0, -50%);
+  }
+  .section_header{
+    position: relative;
+    z-index: 3;
+    h5{
+      color: #fff;
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 60px;
+    }
+  }
+  .aknowlged_by_slider{
+    position: relative;
+    z-index: 3;
+    text-align: center;
+    margin-bottom: 0;
+    .card_icon{
+      height: 100px;
+      // border: 1px solid #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    img{
+      width: 180px;
+      margin: auto;
     }
   }
 }
@@ -1912,12 +2523,12 @@ body.modal-open .mm-slideout {
   .facts_number {
     padding: 100px 0;
   }
-  .about_custom_header{
+  .about_custom_header {
     height: 70vh;
   }
-  .fact_card{
+  .fact_card {
     margin-bottom: 25px;
-    img{
+    img {
       width: 40%;
     }
   }
@@ -1925,7 +2536,7 @@ body.modal-open .mm-slideout {
     width: 120px;
     height: 120px;
   }
-  .why_choose_us_card{
+  .why_choose_us_card {
     min-height: auto;
   }
 }
@@ -1939,7 +2550,7 @@ body.modal-open .mm-slideout {
 .inner_custom_navbar {
   .scheduleButton {
     background-color: #2b4fc9 !important;
-    &:hover{
+    &:hover {
       background-color: #fff !important;
     }
   }
@@ -1952,9 +2563,6 @@ body.modal-open .mm-slideout {
     }
   }
 }
-
-
-
 
 // =============================================================
 /* Shared styles  */
